[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/UserProfile.gd" type="Script" id=1]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/ui/square_borders.png" type="Texture" id=3]
[ext_resource path="res://images/warrior_sprites/idle_frames/idle3.png" type="Texture" id=4]
[ext_resource path="res://images/warrior_sprites/idle_frames/idle6.png" type="Texture" id=5]
[ext_resource path="res://images/warrior_sprites/idle_frames/idle5.png" type="Texture" id=6]
[ext_resource path="res://images/warrior_sprites/idle_frames/idle4.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[node name="UserProfile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 384.0
margin_top = 40.0
margin_right = 537.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "Character Profile
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="LineEdit" parent="."]
margin_left = 87.0
margin_top = 48.0
margin_right = 263.0
margin_bottom = 84.0
size_flags_horizontal = 11
custom_fonts/font = SubResource( 2 )
align = 1
max_length = 12
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 135.0
margin_top = 296.0
margin_right = 213.0
margin_bottom = 320.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Change Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 296.0
margin_top = 328.0
margin_right = 344.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="."]
margin_left = 80.0
margin_top = 328.0
margin_right = 272.0
margin_bottom = 344.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="PlayerPortrait" type="Sprite" parent="."]
position = Vector2( 176, 192 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerPortrait"]
position = Vector2( 8, 0 )
scale = Vector2( 5, 5 )
frames = SubResource( 6 )
animation = "idle"
frame = 2
playing = true

[node name="CharacterProfile" type="Sprite" parent="."]
position = Vector2( 464, 192 )
texture = ExtResource( 3 )

[node name="HealthLabel" type="Label" parent="CharacterProfile"]
margin_left = -80.0
margin_top = -48.0
margin_right = 28.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 7 )
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthValue" type="Label" parent="CharacterProfile/HealthLabel"]
margin_left = 120.0
margin_right = 168.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 8 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthLabel" type="Label" parent="CharacterProfile"]
margin_left = -80.0
margin_top = -16.0
margin_right = 28.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 7 )
text = "Strength:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthValue" type="Label" parent="CharacterProfile/StrengthLabel"]
margin_left = 120.0
margin_right = 168.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 8 )
text = "10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenseLabel" type="Label" parent="CharacterProfile"]
margin_left = -80.0
margin_top = 16.0
margin_right = 28.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
text = "Defense:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenseValue" type="Label" parent="CharacterProfile/DefenseLabel"]
margin_left = 120.0
margin_right = 168.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 8 )
text = "10
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CriticalLabel" type="Label" parent="CharacterProfile"]
margin_left = -80.0
margin_top = 48.0
margin_right = 28.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 7 )
text = "Critical:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CriticalValue" type="Label" parent="CharacterProfile/CriticalLabel"]
margin_left = 120.0
margin_right = 168.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 8 )
text = "30"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvLabel" type="Label" parent="CharacterProfile"]
margin_left = -80.0
margin_top = -80.0
margin_right = 28.0
margin_bottom = -54.0
custom_fonts/font = SubResource( 7 )
text = "Lv:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvValue" type="Label" parent="CharacterProfile/LvLabel"]
margin_left = 120.0
margin_right = 168.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 8 )
text = "1

"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
